<resources>
    <string name="app_name">AIPlant</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_log_in">Login</string>
    <string name="hint_forgot_password">Forgot \n Password?</string>
    <string name="or">Or</string>
    <string name="hint_click_here">Click here for </string>
    <string name="hint_sign_up"> Sign Up</string>
    <string name="flower_name">Plant Name____</string>
    <string name="time_period">Date of Creation</string>
    <string name="temperature">Temperature</string>
    <string name="search_Hint">Search</string>
    <string name="search">Type a keyword</string>
    <string name="change_picture">click here to change picture</string>
    <string name="save_changes">Save</string>
    <string name="lux">lux</string>
    <string name="percent">%</string>
    <string name="celsius">°C</string>
    <string name="humidity">Humidity</string>
    <string name="sunlight">Sunlight</string>
    <string name="name_plant">Name of the plant</string>
    <string name="hint_name_plant">Name your plant</string>
    <string name="birthday_plant">plant Birthday</string>
    <string name="minimum">Min %</string>
    <string name="maximum">Max %</string>
    <string name="minimum_humidity">Min %</string>
    <string name="maximum_humidity">Max %</string>
    <string name="minimum_sunlight">Min lux</string>
    <string name="maximum_sunlight">Max lux</string>
    <string name="minimum_temperature">Min °C</string>
    <string name="maximum_temperature">Max °C</string>
    <string name="measured">Measured</string>
    <string name="create_profile">Create Profile</string>
    <string name="select_date">Select Date</string>
    <string name="bd_day">DD</string>
    <string name="bd_month">MM</string>
    <string name="bd_year">YYYY</string>
    <string name="mood">mood</string>
    <string name="error_name">Please give your plant a name!</string>
    <string name="error_age">Please set your plant\'s birthday!</string>
    <string name="error_pic">Please upload a picture of your plant!</string>
    <string name="error_humidity">Add a value here</string>
    <string name="add_photo">Add photo</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome to eyePlant!</string>
    <string name="slide_1_desc">Our product is meant to help you take better care of your indoor plants by measuring the humidity in the soil, the temperature in the room and the amount of sunlight reaching the plant. Remember, good living conditions make the plant happy.</string>
    <string name="slide_2_title">Create a profile for your plant</string>
    <string name="slide_2_desc">You can either browse our plant list to find your plant and get the default niche for it or you can create a brand new plant with the conditions you decide on. You can always adjust the them from the settings if necessary.</string>
    <string name="slide_3_title">Keep an eye on your plant</string>
    <string name="slide_3_desc">The application will let you know if the environment measured by the device is optimal or not for your plant.</string>
    <string name="slide_4_title">Manage your plant profiles</string>
    <string name="slide_4_desc">Here you can see all your plant profiles nicely displayed in a tree-like shape. You can modify any detail about the plants you own or about your own info.</string>
    <string name="click_on_image_to_edit_profile_picture">Click on image to edit profile picture</string>
    <string name="choose_a_user_name">Choose a user name</string>
    <string name="choose_a_birthday">Choose a birthday</string>
    <string name="no_username">No name</string>
    <string name="user876543">User876543</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="account_settings">Account settings</string>
    <string name="sign_out">Sign out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_device">Reset device</string>
    <string name="example_email_com">example@email.com</string>
    <string name="delete_account">Delete account</string>
    <string name="save">Save</string>
    <string name="full_name_hint">Full Name</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_hint">Email</string>
    <string name="name_last_name_hint">Name and Last Name</string>
    <string name="registration_success">Registration successful, please check your email inbox for confirmation</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="required">Required</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="send">Send</string>
    <string name="please_em_pass">Please type in email and password</string>
    <string name="please_em">Please type in email or phone</string>
    <string name="please_pass">Please type in your password</string>
    <string name="please_fill">Please fill in the information and Agree to Terms and Conditions</string>
    <string name="please_valid_email">Please type in a valid email</string>
    <string name="please_valid_name">Please fill in with Name and Last Name</string>
    <string name="please_choose_pass">Please choose a password</string>
    <string name="please_conf_pass">Please confirm password</string>
    <string name="pass_no_match">Password does not match</string>
    <string name="pass_must_match">Error: Password must match confirm password. Try again</string>
    <string name="agree_to_terms_first">Agree to Terms and Conditions first</string>
    <string name="agree_terms_toast">Error: Agree to Terms and Conditions first</string>
    <string name="register_for_free">Register for Free</string>
    <string name="i_agree_to">Agree to </string>
    <string name="terms_and_conditions">Terms and Conditions.</string>
    <string name="I_agree_to_terms_and_conditions">I agree </string>
    <string name="simply_enter">Simply enter your email address below and we will send you instructions on how to reset your password.</string>
    <string name="hint_forgot_password_email">Enter your email here</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="password_receive_text">Your password will be sent to your email</string>
    <string name="button_send_password">Send Mail</string>
    <string name="confirm_sing_out">Are you sure you want to SignOut?</string>
    <string name="signing_out">Signing Out…</string>
    <string name="terms_of_conditions_governing_law">Governing Law</string>
    <string name="terms_of_conditions_governing_law_text"> If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect.
        These Terms constitute the entire agreement between us regarding our Service, and supersede and replace any prior agreements we might have between us regarding the Service.</string>
    <string name="terms_of_conditions_changes">Changes</string>
    <string name="terms_of_conditions_changes_text">We reserve the right, at our sole discretion, to modify or replace these Terms at any time.
        If a revision is material we will try to provide at least 15 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.
        By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms.
        If you do not agree to the new terms, please stop using the Service.</string>
    <string name="terms_of_conditions_accounts">Accounts</string>
    <string name="terms_of_conditions_accounts_text">When you create an account with us, you must
    provide us information that is accurate, complete, and current at all times.
    Failure to do so constitutes a breach of the Terms, which may result in immediate termination of
    your account on our Service.

    You are responsible for safeguarding the password that you use to access the Service and for any
    activities or actions under your password,
    whether your password is with our Service or a third-party service.

    You agree not to disclose your password to any third party. You must notify us immediately upon
    becoming aware of any breach of security or unauthorized use of your account.
    </string>
    <string name="termination">Termination</string>
    <string name="termination_text">We may terminate or suspend access to our Service immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.

All provisions of the Terms which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and limitations of liability.

We may terminate or suspend your account immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.

Upon termination, your right to use the Service will immediately cease. If you wish to terminate your account, you may simply discontinue using the Service.

All provisions of the Terms which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and limitations of liability.</string>
    <string name="library_info_text">Start adding your plants living conditions, by doing this you will see if the plant actual living conditions needs some changes.</string>
    <string name="add_plant_from_database_header">Have no idea?</string>
    <string name="add_plant_from_scratch_header">Are you experienced?</string>
    <string name="click_for_adding_from_database">Click button to find your plant from in our library</string>
    <string name="click_to_add_plant_yourself">Click button to start creating a new plant profile</string>
    <string name="add_button">Add</string>
    <string name="click_for_living_conditions"><u>Click for more information</u>.</string>
    <string name="minimum_value">Min.</string>
    <string name="maximum_value">Max.</string>
    <string name="my_app_id">eye-plant-tilrj</string>
    <string name="eye_plant">eye_plant</string>
    <string name="service_name">mongodb-atlas</string>
    <string name="eye_plant_plants">plants</string>
    <string name="eye_plant_users">users</string>
    <string name="eye_plant_plant_profiles">plant_profiles</string>
    <string name="name_for_db">name</string>
    <string name="email_for_db">email</string>
    <string name="picture_for_db">picture</string>
    <string name="number_of_plants_for_db">number_of_plants</string>
    <string name="birthday_for_db">birthday</string>
    <string name="sent_reset_email">Successfully sent password reset email</string>
    <string name="google_web_client_id">556950483367–9ekr8qotdiv7md2r1tckudh09damgof0.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_username">Edit username</string>
    <string name="button_connect">Connect device</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="light">Light</string>
</resources>