<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp"
    android:layout_margin="5dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:background="@drawable/button_white_sharp_edge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/close_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:elevation="4dp"
        android:layout_margin="10dp"
        android:src="@drawable/cancel_icon"
        android:background="@drawable/button_white_round_edge"
        >

    </ImageButton>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePicPlant_imgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/add_pic"
        android:layout_centerInParent="true"/>

</RelativeLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_plant" />

                <EditText
                    android:layout_margin="3dp"
                    android:id="@+id/namePlant_editText"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_name_plant" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/birthday_plant" />

                <!--<DatePicker
                    android:id="@+id/datePicker1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"/> -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="6"
                    android:layout_margin="3dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/bd_day"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:hint="@string/bd_day"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:layout_weight="2"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/bd_month"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:hint="@string/bd_month"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:layout_weight="2"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/bd_year"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:hint="@string/bd_year"
                        android:layout_weight="2"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:textAlignment="center" />
                </LinearLayout>



                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="3dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:drawableEnd="@drawable/water"
                        android:text="@string/humidity"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:src="@drawable/humidity" />

                    <EditText
                        android:id="@+id/minHumidity_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:hint="@string/minimum"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:text="@string/percent"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/maxHumidity_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:hint="@string/maximum"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:textAlignment="center" />


                </LinearLayout>

                <LinearLayout
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="9">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:text="@string/temperature"
                        android:gravity="center_vertical"
                        android:drawableEnd="@drawable/thermometer_red"
                        android:layout_weight="3.5"
                        android:src="@drawable/temperature" />

                    <EditText
                        android:id="@+id/minTemperature_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:hint="@string/minimum_temperature"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:textAlignment="center" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/celsius"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                         />

                    <EditText
                        android:id="@+id/maxTemperature_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:hint="@string/maximum_temperature"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:textAlignment="center" />

                </LinearLayout>


                <LinearLayout
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:text="@string/light"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:drawableEnd="@drawable/sunny"
                        android:src="@drawable/daylight" />

                    <EditText
                        android:id="@+id/minSunlight_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:hint="@string/minimum"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:textAlignment="center" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/percent"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/maxSunlight_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:imeOptions="actionNext"
                        android:hint="@string/maximum"
                        android:inputType="number"
                        android:textAlignment="center" />

                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createProfile_btn"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@drawable/input_fields_with_shadow"
                android:elevation="5dp"
                android:padding="10dp"
                android:shadowColor="@color/black"
                android:text="@string/create_profile"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>


        </LinearLayout>


    </ScrollView>
</androidx.cardview.widget.CardView>
