<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/information_sliders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/flower_pic_temperature_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature" />

                <SeekBar
                    android:id="@+id/temperature_slider"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/flower_pic_humidity_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity" />

                <SeekBar
                    android:id="@+id/humidity_slider"
                    android:layout_width="250dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/flower_pic_sunlight_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sunlight" />

                <SeekBar
                    android:id="@+id/sunlight_slider"
                    android:layout_width="250dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/flower_pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/information_sliders"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/flower_pic_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flower_pic"
            android:layout_centerInParent="true"
            android:text="@string/flower_name" />

        <TextView
            android:id="@+id/flower_pic_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flower_pic_name_text"
            android:layout_centerInParent="true"
            android:text="@string/time_period" />

    </RelativeLayout>

</merge>