<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/accountSettingsTextView"
            android:clickable="true"
            android:background="@drawable/border_not_sharp"
            android:padding="5dp"
            android:focusable="true"
            android:text="@string/account_settings"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </RelativeLayout>

    <RelativeLayout

        android:layout_width="200dp"
        android:layout_height="40dp">


        <TextView
            android:id="@+id/signOutTextView"
            android:clickable="true"
            android:background="@drawable/border_not_sharp"
            android:padding="5dp"
            android:focusable="true"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout

        android:layout_width="200dp"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/cancelTextView"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/border_not_sharp"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>




</LinearLayout>